apps/omnitools/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omnitools
  namespace: omnitools
  labels:
    app: omnitools
spec:
  type: ClusterIP
  selector:
    app: omnitools
    app.kubernetes.io/name: omnitools
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
